--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/base_application_images/svg/logo.svg
+    - assets/images/base_application_images/svg/
+    - assets/audio/
+    - assets/audio_images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
