--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_svg: ^2.1.0
   google_fonts: ^6.2.1
   audioplayers: ^6.4.0
+  flutter_riverpod: ^2.6.1
+  riverpod: ^2.6.1
+
 
 dev_dependencies:
   flutter_test:
