--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   audioplayers: ^6.4.0
   get_it: ^8.0.3
   flutter_riverpod: ^2.6.1
+  sqflite: ^2.3.2
+  path_provider: ^2.1.2
+  path: ^1.8.3
+  file_picker: ^6.1.1
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
